// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicAddress component sanity matches default snapshot 1`] = `
.c0 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 {
  box-sizing: border-box;
}

.c5 {
  color: #fff;
  background-color: #999;
  margin: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 32px;
  padding-right: 32px;
  width: small;
  height: small;
  border: none;
  border-radius: 4px;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  --main-color: #4E3FCE;
  --contrast-color: #fff;
  color: #fff;
  background-color: #999;
  margin: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 32px;
  padding-right: 32px;
  border: none;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  font-size: inherit;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-weight: 600;
  font-size: 0.75rem;
  height: 2rem;
  min-width: 2rem;
  padding: 0 1rem;
}

.c5 {
  box-sizing: border-box;
}

.c5 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5:hover {
  cursor: pointer;
}

.c5:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c5 > svg,
.c5 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c5 > svg {
  display: block;
}

.c5 > svg:first-child {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c5 > svg:last-child {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c5 > svg:first-child:last-child {
  margin: 0;
}

.c5 {
  color: var(--contrast-color);
  background: #FFF;
  position: relative;
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c5:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c5:hover::before {
  opacity: 0.9;
}

.c5:active {
  box-shadow: none;
  background: #000;
}

.c5::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  background: var(--main-color);
  pointer-events: none;
}

.c1 {
  color: #3F3D4B;
  margin-bottom: 8px;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.5;
  text-align: left;
  color: #3F3D4B;
  margin-bottom: 8px;
}

.c1 {
  box-sizing: border-box;
}

.c4 {
  color: #3F3D4B;
  background-color: #fff;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 16px;
  padding-right: 16px;
  height: 3rem;
  border: 1px solid transparent;
  border-color: #CCC;
  border-radius: 4px;
  border-color: #CCC;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  font-size: 1rem;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
}

.c4 {
  box-sizing: border-box;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c4:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c4:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.was-validated .c4:valid {
  border-color: #28C081;
}

.was-validated .c4:valid ~ svg.icon-valid {
  visibility: visible;
}

.was-validated .c4:invalid {
  border-color: #EC9081;
}

.was-validated .c4:invalid ~ svg.icon-invalid {
  visibility: visible;
}

.c3 {
  text-overflow: ellipsis;
  white-space: no-wrap;
}

.c2 {
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  position: relative;
}

.c2 > input {
  width: 100%;
  padding-right: 5.25rem;
}

.c2 > button {
  position: absolute;
  width: 4rem;
  right: 0.75rem;
}

<label
  class="c0"
  display="flex"
>
  <div
    class="c1"
    color="copyColor"
    font-family="sansSerif"
    font-size="1"
    font-weight="3"
  >
    Public address
  </div>
  <div
    class="c2"
    required=""
  >
    <input
      class="c3 c4"
      color="copyColor"
      font-family="sansSerif"
      font-size="1rem"
      height="3rem"
      readonly=""
    />
    <button
      class="c5"
      color="white"
      font-family="sansSerif"
      font-size="inherit"
      font-weight="3"
    >
      <span
        class="button-text"
      >
        Copy
      </span>
    </button>
  </div>
</label>
`;

exports[`PublicAddress component sanity matches themed snapshot 1`] = `
.c1 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  box-sizing: border-box;
}

.c6 {
  color: #fff;
  background-color: #999;
  margin: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 32px;
  padding-right: 32px;
  width: small;
  height: small;
  border: none;
  border-radius: 4px;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  --main-color: #4E3FCE;
  --contrast-color: #fff;
  color: #fff;
  background-color: #999;
  margin: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 32px;
  padding-right: 32px;
  border: none;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  font-size: inherit;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-weight: 600;
  font-size: 0.75rem;
  height: 2rem;
  min-width: 2rem;
  padding: 0 1rem;
}

.c6 {
  box-sizing: border-box;
}

.c6 {
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  overflow: hidden;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6:hover {
  cursor: pointer;
}

.c6:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.c6 > svg,
.c6 > span.button-text {
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c6 > svg {
  display: block;
}

.c6 > svg:first-child {
  margin-left: -0.5rem;
  margin-right: .5rem;
}

.c6 > svg:last-child {
  margin-left: .5rem;
  margin-right: -0.5rem;
}

.c6 > svg:first-child:last-child {
  margin: 0;
}

.c6 {
  color: var(--contrast-color);
  background: #FFF;
  position: relative;
  z-index: 0;
  -webkit-transition: all 0.15s ease;
  transition: all 0.15s ease;
}

.c6:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c6:hover::before {
  opacity: 0.9;
}

.c6:active {
  box-shadow: none;
  background: #000;
}

.c6::before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  height: 100%;
  width: 100%;
  background: var(--main-color);
  pointer-events: none;
}

.c2 {
  color: #3F3D4B;
  margin-bottom: 8px;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.5;
  text-align: left;
  color: #3F3D4B;
  margin-bottom: 8px;
}

.c2 {
  box-sizing: border-box;
}

.c5 {
  color: #3F3D4B;
  background-color: #fff;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 16px;
  padding-right: 16px;
  height: 3rem;
  border: 1px solid transparent;
  border-color: #CCC;
  border-radius: 4px;
  border-color: #CCC;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  font-size: 1rem;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
}

.c5 {
  box-sizing: border-box;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c5:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c5:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.was-validated .c5:valid {
  border-color: #28C081;
}

.was-validated .c5:valid ~ svg.icon-valid {
  visibility: visible;
}

.was-validated .c5:invalid {
  border-color: #EC9081;
}

.was-validated .c5:invalid ~ svg.icon-invalid {
  visibility: visible;
}

.c4 {
  text-overflow: ellipsis;
  white-space: no-wrap;
}

.c3 {
  box-sizing: border-box;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  position: relative;
}

.c3 > input {
  width: 100%;
  padding-right: 5.25rem;
}

.c3 > button {
  position: absolute;
  width: 4rem;
  right: 0.75rem;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <label
    class="c1"
    display="flex"
  >
    <div
      class="c2"
      color="copyColor"
      font-family="sansSerif"
      font-size="1"
      font-weight="3"
    >
      Public address
    </div>
    <div
      class="c3"
      required=""
    >
      <input
        class="c4 c5"
        color="copyColor"
        font-family="sansSerif"
        font-size="1rem"
        height="3rem"
        readonly=""
      />
      <button
        class="c6"
        color="white"
        font-family="sansSerif"
        font-size="inherit"
        font-weight="3"
      >
        <span
          class="button-text"
        >
          Copy
        </span>
      </button>
    </div>
  </label>
</div>
`;
